# scaledb-interfaces

./: ProjectHome.md
docs/: scaledb.cnf  slm.cnf
generic_client/impl/: scaledb_test.cpp
mysql/: README
mysql/impl/: Makefile.am  ha_scaledb.cpp  mysql_foreign_key.cpp  mysql_txn.cpp  plug.in  sdb_mysql_client.cpp
mysql/incl/: ha_scaledb.h  mysql_foreign_key.h  mysql_txn.h  sdb_mysql_client.h
scaledb/incl/: SdbCommon.h  SdbStorageAPI.h
